--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "chart.js": "^3.5.0",
+    "postcss": "^7.0.36",
     "sirv-cli": "^1.0.0",
-    "svelte-spa-router": "^3.2.0"
+    "svelte-spa-router": "^3.2.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
