feat: tailwind + notus 初期化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 
   "compilerOptions": {
     "allowJs": true,
-    "outDir": "./public/build"
+    "outDir": "./ts-out"
   },
 
   "include": ["src/**/*", "types/**/*"],
