--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "prettier-plugin-svelte": "^2.3.1",
     "rollup": "^2.3.4",
@@ -23,15 +25,14 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "^2.2.7",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.6",
+    "@tailwindcss/forms": "^0.3.3",
     "chart.js": "^3.5.0",
-    "postcss": "^7.0.36",
     "sirv-cli": "^1.0.0",
-    "svelte-spa-router": "^3.2.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "svelte-spa-router": "^3.2.0"
   }
 }
