--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "serve": "rollup -c -w",
     "start": "sirv public --no-clear --port 1848",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "tailwind": "npx tailwindcss -i ./src/assets/tailwind.css -o ./public/tailwind.css --watch"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -27,11 +28,11 @@
     "svelte-preprocess": "^4.0.0",
     "tailwindcss": "^2.2.7",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.3",
-    "chart.js": "^3.5.0",
+    "chart.js": "^2.9.4",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.2.0"
   }
