--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./ts-out"
   },
 
-  "include": ["src/**/*", "types/**/*"],
+  "typeRoots": ["node_modules/@types", "src/types"],
+  "include": ["src/**/*", "src/types/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
